gitops-opa/pod-imglatest-tag.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-latest
spec:
  containers:
  - name: nginx
    image: nginx:latest
